// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: after list get 1`] = `
Object {
  "lists": Object {
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 0,
          "myNum": 0,
          "myString": "0num",
        },
        Object {
          "id": 1,
          "myNum": 420,
          "myString": "1num",
        },
        Object {
          "id": 2,
          "myNum": 840,
          "myString": "2num",
        },
        Object {
          "id": 3,
          "myNum": 1260,
          "myString": "3num",
        },
        Object {
          "id": 4,
          "myNum": 1680,
          "myString": "4num",
        },
        Object {
          "id": 5,
          "myNum": 2100,
          "myString": "5num",
        },
        Object {
          "id": 6,
          "myNum": 2520,
          "myString": "6num",
        },
        Object {
          "id": 7,
          "myNum": 2940,
          "myString": "7num",
        },
        Object {
          "id": 8,
          "myNum": 3360,
          "myString": "8num",
        },
        Object {
          "id": 9,
          "myNum": 3780,
          "myString": "9num",
        },
      ],
      "skip": 0,
      "total": 99,
    },
  },
}
`;

exports[`DbStore Create Test: after login 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: after second page get 1`] = `
Object {
  "lists": Object {
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 10,
          "myNum": 4200,
          "myString": "10num",
        },
        Object {
          "id": 11,
          "myNum": 4620,
          "myString": "11num",
        },
        Object {
          "id": 12,
          "myNum": 5040,
          "myString": "12num",
        },
        Object {
          "id": 13,
          "myNum": 5460,
          "myString": "13num",
        },
        Object {
          "id": 14,
          "myNum": 5880,
          "myString": "14num",
        },
        Object {
          "id": 15,
          "myNum": 6300,
          "myString": "15num",
        },
        Object {
          "id": 16,
          "myNum": 6720,
          "myString": "16num",
        },
        Object {
          "id": 17,
          "myNum": 7140,
          "myString": "17num",
        },
        Object {
          "id": 18,
          "myNum": 7560,
          "myString": "18num",
        },
        Object {
          "id": 19,
          "myNum": 7980,
          "myString": "19num",
        },
      ],
      "skip": 10,
      "total": 99,
    },
  },
}
`;

exports[`DbStore Create Test: after third page get 1`] = `
Object {
  "lists": Object {
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 20,
          "myNum": 8400,
          "myString": "20num",
        },
        Object {
          "id": 21,
          "myNum": 8820,
          "myString": "21num",
        },
        Object {
          "id": 22,
          "myNum": 9240,
          "myString": "22num",
        },
        Object {
          "id": 23,
          "myNum": 9660,
          "myString": "23num",
        },
        Object {
          "id": 24,
          "myNum": 10080,
          "myString": "24num",
        },
        Object {
          "id": 25,
          "myNum": 10500,
          "myString": "25num",
        },
        Object {
          "id": 26,
          "myNum": 10920,
          "myString": "26num",
        },
        Object {
          "id": 27,
          "myNum": 11340,
          "myString": "27num",
        },
        Object {
          "id": 28,
          "myNum": 11760,
          "myString": "28num",
        },
        Object {
          "id": 29,
          "myNum": 12180,
          "myString": "29num",
        },
      ],
      "skip": 20,
      "total": 99,
    },
  },
}
`;

exports[`DbStore Create Test: before login 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Loading
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          1
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: empty result 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals but not fetched yet 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals with guaranteed fetch 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "0num"
        </td>
        <td>
          0
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "11num"
        </td>
        <td>
          4620
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "22num"
        </td>
        <td>
          9240
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "33num"
        </td>
        <td>
          13860
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "44num"
        </td>
        <td>
          18480
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "55num"
        </td>
        <td>
          23100
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "66num"
        </td>
        <td>
          27720
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "77num"
        </td>
        <td>
          32340
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "88num"
        </td>
        <td>
          36960
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: list after fetch 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "0num"
        </td>
        <td>
          0
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "1num"
        </td>
        <td>
          420
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "2num"
        </td>
        <td>
          840
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "3num"
        </td>
        <td>
          1260
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "4num"
        </td>
        <td>
          1680
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "5num"
        </td>
        <td>
          2100
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "6num"
        </td>
        <td>
          2520
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "7num"
        </td>
        <td>
          2940
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "8num"
        </td>
        <td>
          3360
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "9num"
        </td>
        <td>
          3780
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: list before fetch 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: list on fourth page 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "30num"
        </td>
        <td>
          12600
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "31num"
        </td>
        <td>
          13020
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "32num"
        </td>
        <td>
          13440
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "33num"
        </td>
        <td>
          13860
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "34num"
        </td>
        <td>
          14280
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "35num"
        </td>
        <td>
          14700
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "36num"
        </td>
        <td>
          15120
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "37num"
        </td>
        <td>
          15540
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "38num"
        </td>
        <td>
          15960
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "39num"
        </td>
        <td>
          16380
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          4
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix after list get 1`] = `
Object {
  "lists": Object {
    "createpref.formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 0,
          "myNum": 0,
          "myString": "0num",
        },
        Object {
          "id": 1,
          "myNum": 420,
          "myString": "1num",
        },
        Object {
          "id": 2,
          "myNum": 840,
          "myString": "2num",
        },
        Object {
          "id": 3,
          "myNum": 1260,
          "myString": "3num",
        },
        Object {
          "id": 4,
          "myNum": 1680,
          "myString": "4num",
        },
        Object {
          "id": 5,
          "myNum": 2100,
          "myString": "5num",
        },
        Object {
          "id": 6,
          "myNum": 2520,
          "myString": "6num",
        },
        Object {
          "id": 7,
          "myNum": 2940,
          "myString": "7num",
        },
        Object {
          "id": 8,
          "myNum": 3360,
          "myString": "8num",
        },
        Object {
          "id": 9,
          "myNum": 3780,
          "myString": "9num",
        },
      ],
      "skip": 0,
      "total": 99,
    },
    "formModel": Object {
      "limit": 10,
      "result": Array [
        Object {
          "id": 20,
          "myNum": 8400,
          "myString": "20num",
        },
        Object {
          "id": 21,
          "myNum": 8820,
          "myString": "21num",
        },
        Object {
          "id": 22,
          "myNum": 9240,
          "myString": "22num",
        },
        Object {
          "id": 23,
          "myNum": 9660,
          "myString": "23num",
        },
        Object {
          "id": 24,
          "myNum": 10080,
          "myString": "24num",
        },
        Object {
          "id": 25,
          "myNum": 10500,
          "myString": "25num",
        },
        Object {
          "id": 26,
          "myNum": 10920,
          "myString": "26num",
        },
        Object {
          "id": 27,
          "myNum": 11340,
          "myString": "27num",
        },
        Object {
          "id": 28,
          "myNum": 11760,
          "myString": "28num",
        },
        Object {
          "id": 29,
          "myNum": 12180,
          "myString": "29num",
        },
      ],
      "skip": 20,
      "total": 99,
    },
  },
}
`;

exports[`DbStore Create Test: prefix list after fetch 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "0num"
        </td>
        <td>
          0
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "1num"
        </td>
        <td>
          420
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "2num"
        </td>
        <td>
          840
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "3num"
        </td>
        <td>
          1260
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "4num"
        </td>
        <td>
          1680
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "5num"
        </td>
        <td>
          2100
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "6num"
        </td>
        <td>
          2520
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "7num"
        </td>
        <td>
          2940
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "8num"
        </td>
        <td>
          3360
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "9num"
        </td>
        <td>
          3780
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix list before fetch 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Loading
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          1
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix second page 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "10num"
        </td>
        <td>
          4200
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "11num"
        </td>
        <td>
          4620
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "12num"
        </td>
        <td>
          5040
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "13num"
        </td>
        <td>
          5460
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "14num"
        </td>
        <td>
          5880
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "15num"
        </td>
        <td>
          6300
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "16num"
        </td>
        <td>
          6720
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "17num"
        </td>
        <td>
          7140
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "18num"
        </td>
        <td>
          7560
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "19num"
        </td>
        <td>
          7980
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          2
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query number 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody />
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          0
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query set 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "1num"
        </td>
        <td>
          420
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          1
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          1
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: prefix third page 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "20num"
        </td>
        <td>
          8400
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "21num"
        </td>
        <td>
          8820
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "22num"
        </td>
        <td>
          9240
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "23num"
        </td>
        <td>
          9660
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "24num"
        </td>
        <td>
          10080
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "25num"
        </td>
        <td>
          10500
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "26num"
        </td>
        <td>
          10920
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "27num"
        </td>
        <td>
          11340
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "28num"
        </td>
        <td>
          11760
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "29num"
        </td>
        <td>
          12180
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          3
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DbStore Create Test: using prevPage back to third page 1`] = `
<div>
  <table
    class="table is-striped is-hoverable is-fullwidth"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          myString
        </th>
        <th>
          myNum
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td>
          "20num"
        </td>
        <td>
          8400
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "21num"
        </td>
        <td>
          8820
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "22num"
        </td>
        <td>
          9240
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "23num"
        </td>
        <td>
          9660
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "24num"
        </td>
        <td>
          10080
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "25num"
        </td>
        <td>
          10500
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "26num"
        </td>
        <td>
          10920
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "27num"
        </td>
        <td>
          11340
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "28num"
        </td>
        <td>
          11760
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td />
        <td>
          "29num"
        </td>
        <td>
          12180
        </td>
        <td>
          <span
            class="has-text-danger"
          >
            <div>
              <a
                class="button is-warning"
                onClick={[Function]}
              >
                Delete
              </a>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="pagination is-centered"
  >
    <a
      class="pagination-previous"
      onClick={[Function]}
    >
      Prev
    </a>
    <a
      class="pagination-next"
      onClick={[Function]}
    >
      Next
    </a>
    <ul
      class="pagination-list"
    >
      <li>
        <a
          class="pagination-link is-current"
        >
          3
        </a>
      </li>
      <li>
        <span
          class="pagination-ellipsis"
        >
           / 
        </span>
      </li>
      <li>
        <a
          class="pagination-link"
        >
          10
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
